// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseSubmissionMessagesComponent should compile correctly 1`] = `
<case-submission-messages
  displayDatesToAvoidUpdateFailedBanner="false"
  displayOffencesWithdrawnBanner={[Function Boolean]}
  kase={[Function Object]}
>
  <pdk-alert
    class="govuk-!-margin-top-3"
    pdk-margin-top="3"
    type="confirmation"
  >
    <div
      class="pdk-alert pdk-alert--confirmation"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--tick"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             Your request has been sent 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert><pdk-alert
    class="govuk-!-margin-top-1 govuk-!-margin-bottom-1"
    pdk-margin-vertical="1"
    type="warning"
  >
    <div
      class="pdk-alert pdk-alert--warning"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--alert"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             This case is view–only, as a legal adviser is working on it. 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert><pdk-alert
    class="govuk-!-margin-top-1 govuk-!-margin-bottom-1"
    pdk-margin-vertical="1"
    type="warning"
  >
    <div
      class="pdk-alert pdk-alert--warning"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--alert"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             You can't edit this case because it has already been completed. 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert>
</case-submission-messages>
`;

exports[`CaseSubmissionMessagesComponent should display alert when case is assigned 1`] = `
<case-submission-messages
  displayDatesToAvoidUpdateFailedBanner="false"
  displayOffencesWithdrawnBanner="false"
  kase={[Function Object]}
>
  <pdk-alert
    class="govuk-!-margin-top-1 govuk-!-margin-bottom-1"
    pdk-margin-vertical="1"
    type="warning"
  >
    <div
      class="pdk-alert pdk-alert--warning"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--alert"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             This case is view–only, as a legal adviser is working on it. 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert>
</case-submission-messages>
`;

exports[`CaseSubmissionMessagesComponent should display alert when case is completed 1`] = `
<case-submission-messages
  displayDatesToAvoidUpdateFailedBanner="false"
  displayOffencesWithdrawnBanner="false"
  kase={[Function Object]}
>
  <pdk-alert
    class="govuk-!-margin-top-1 govuk-!-margin-bottom-1"
    pdk-margin-vertical="1"
    type="warning"
  >
    <div
      class="pdk-alert pdk-alert--warning"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--alert"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             You can't edit this case because it has already been completed. 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert>
</case-submission-messages>
`;

exports[`CaseSubmissionMessagesComponent should display banner if withdraw offences is successful 1`] = `
<case-submission-messages
  displayDatesToAvoidUpdateFailedBanner="false"
  displayOffencesWithdrawnBanner={[Function Boolean]}
  kase={[Function Object]}
>
  <pdk-alert
    class="govuk-!-margin-top-3"
    pdk-margin-top="3"
    type="confirmation"
  >
    <div
      class="pdk-alert pdk-alert--confirmation"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--tick"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             Your request has been sent 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert>
</case-submission-messages>
`;

exports[`CaseSubmissionMessagesComponent should display correct banner if case is assigned and submit dates to avoid failed 1`] = `
<case-submission-messages
  displayDatesToAvoidUpdateFailedBanner={[Function Boolean]}
  displayOffencesWithdrawnBanner="false"
  kase={[Function Object]}
>
  <pdk-alert
    class="govuk-!-margin-top-1 govuk-!-margin-bottom-1"
    pdk-margin-vertical="1"
    type="warning"
  >
    <div
      class="pdk-alert pdk-alert--warning"
      role="alert"
    >
      <div
        class="pdk-alert__container"
      >
        <i
          aria-hidden="true"
          class="pdk-alert__icon pdk-alert__icon--alert"
          role="presentation"
        />
        <div
          class="pdk-alert__message"
        >
          <div>
             The case has been assigned to a session and dates to avoid can't be added. 
          </div>
        </div>
      </div>
    </div>
  </pdk-alert>
</case-submission-messages>
`;
